packages/webawesome/docs/assets/styles/docs.css
/* ... */
wa-page {
  --wa-flow-spacing: var(--wa-space-xl);
}

/* Header */
wa-page::part(header) {
  background-color: var(--wa-color-surface-default);
  border-bottom: var(--wa-border-style) var(--wa-panel-border-width) var(--wa-color-surface-border);
}

wa-page::part(body) {
  padding-top: 0px;
}

wa-page::part(header-actions) {
  align-self: center;
}

wa-page > header {
  padding-inline: var(--wa-space-xl);

  a[href='/'] {
    color: var(--wa-color-text-normal);
    line-height: 1;
  }

  wa-button[data-toggle-nav] {
    --text-color: currentColor;
    font-size: 1rem;
    margin-inline-start: -0.875rem;
    margin-inline-end: 0;

    &::part(base) {
      padding: 0;
      padding-inline: 0.875rem;
    }
  }

  svg {
    width: auto;
    height: 1.75rem;
  }

  #docs-branding,
  #docs-toolbar {
    display: flex;
    align-items: center;
    gap: var(--wa-space-s);

    .color-scheme-selector,
    .theme-selector {
      max-inline-size: 20ch;
    }

    wa-divider:last-child {
      display: none;
    }
  }

  #github-buttons {
    > wa-button {
      &::part(base) {
        color: var(--wa-color-on-quiet);
        background-color: var(--wa-color-fill-quiet);
      }
      > wa-icon {
        font-size: round(1.25em, 1px);
      }
    }

    > wa-tooltip {
      --wa-tooltip-arrow-size: 0;
      font-size: var(--wa-font-size-xs);
    }
  }

  #version-number {
    color: var(--wa-color-text-quiet);
    font-size: var(--wa-font-size-xs);
    line-height: 1;
    margin-block-start: var(--wa-space-2xs);
  }
  #version-number + wa-badge {
    font-size: var(--wa-font-size-2xs);
    text-transform: uppercase;
  }
}

#sidebar,
#outline {
  h2 {
    font-size: var(--wa-font-size-s);
    margin: 0;
  }

  h2:not(:first-child) {
    margin-block-start: var(--wa-space-xs);
  }

  wa-details {
    --spacing: 0;

    &::part(header) {
      padding: 0;
      padding-block-start: var(--wa-space-xs);
    }

    &::part(content) {
      padding-block-start: var(--wa-space-m);
    }

    &::part(base) {
      border: none;
      background: none;
      padding: 0;
    }
  }

  ul {
    border-inline-start: var(--wa-border-width-s) solid var(--wa-color-surface-border);
    font-size: var(--wa-font-size-s);
    line-height: var(--wa-line-height-condensed);
    padding-inline-start: var(--wa-space-m);
  }

  ul ul {
    margin-block-start: var(--wa-space-m);
  }

  ul:empty {
    display: none;
  }

  li {
    list-style: none;
    margin: 0;

    + li {
      margin-block-start: var(--wa-space-m);
    }
  }

  li a {
    color: var(--wa-color-text-normal);
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }

  li wa-badge::part(base) {
    font-size: var(--wa-font-size-2xs);
    font-weight: var(--wa-font-weight-bold);
  }

  li wa-icon {
    color: var(--wa-color-text-quiet);
    vertical-align: middle;

    &[name='flask'] {
      margin-inline: 0.125em;
    }
  }
}

#outline-standard h2 {
  margin-block-end: var(--wa-space-m);
}

/* Pro badges */
wa-badge.pro {
  color: white;
  background-color: var(--wa-brand-orange);
  border-color: var(--wa-brand-orange);
}

#sidebar {
  h2 {
    color: var(--wa-color-text-quiet);

    a {
      display: flex;
      align-items: center;
      gap: 0.4em;
      color: var(--wa-color-text-normal);
      text-decoration: none;

      wa-icon {
        margin-block-end: -0.15em;
        font-size: var(--wa-font-size-s);
        font-weight: var(--wa-font-weight-action);
        color: var(--wa-color-gray-70);
      }

      &:hover {
        color: var(--wa-color-brand-on-normal);

        wa-icon {
          color: var(--wa-color-brand-on-quiet);
        }
      }
    }
  }

  wa-button.delete {
    margin-inline-start: var(--wa-space-xs);

    &:hover wa-icon {
      color: var(--wa-color-danger-on-quiet);
    }

    &:not(li:hover > *, :focus) {
      opacity: 0;
    }
  }

  wa-details {
    --show-duration: 0;
    --hide-duration: 0;
  }
}

wa-button.delete {
  &::part(base):hover {
    color: var(--wa-color-danger-on-quiet);
    background: var(--wa-color-danger-fill-quiet);
  }

  &:not(:hover, :focus) {
    opacity: 0.5;
  }
}

[slot='navigation-header'] {
  wa-select::part(listbox) {
    font-weight: var(--wa-font-weight-normal);
  }
}

#sidebar-close-button {
  display: none;
}

@media screen and (max-width: 768px) {
  #sidebar-close-button {
    display: inline-block;
    position: absolute;
    top: 1rem;
    right: 1rem;
  }
}

#sidebar nav {
  padding-bottom: 1rem;
}

wa-page::part(menu) {
  scrollbar-width: thin;
}

wa-page[view='mobile'] :is([slot='navigation-header'], [slot='navigation']) {
  padding: 0;

  & wa-details::part(icon) {
    padding-inline: var(--wa-space-xs); /* aligns details icons with drawer close icon */
  }
}

/* Main content */
wa-page > main {
  max-width: 80ch;
  padding: var(--wa-space-xl);
  margin-inline: auto;
}

h1.title {
  wa-badge {
    vertical-align: middle;
    font-size: 1.5rem;
  }
}

.component-info {
  display: flex;
  gap: var(--wa-space-xs);
  flex-wrap: wrap;
  align-items: center;
  margin-block-end: var(--wa-flow-spacing);

  code {
    line-height: var(--wa-line-height-condensed);
  }
}

/* Current link */
#sidebar,
#outline {
  .current {
    font-weight: var(--wa-font-weight-bold);
    text-decoration-style: solid;
  }
}

/* Anchor headings */
.anchor-heading a {
  visibility: hidden;
  text-decoration: none;
}

@media (hover: hover) {
  .anchor-heading:hover a {
    visibility: visible;
    padding: 0 0.125em;
  }
}

@media print {
  /* Show URLs for printed links */
  a:not(.anchor-heading)[href]::after {
    content: ' (' attr(href) ')';
  }
}

/* Callouts */
.callout {
  display: flex;
  gap: 1rem;
  border: var(--wa-border-style) var(--wa-border-width-s);
  border-radius: var(--wa-border-radius-l);
  padding: 1rem;
  margin-block-end: var(--wa-flow-spacing);

  :first-child {
    margin-block-start: 0;
  }

  :last-child {
    margin-block-end: 0;
  }
}
/* ... */

